# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  23 Jan 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/catalyst_support.py, modules/embedded_target.py,
  modules/generic_stage_target.py, modules/grp_target.py,
  modules/livecd_stage1_target.py, modules/livecd_stage2_target.py,
  modules/stage3_target.py, modules/tinderbox_target.py:
  Added patch from Andrew Gaffney <agaffney@gentoo.org> to fix up some of the
  tab/space nastiness. This is for bug #161915.

  23 Jan 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Fixed new cbuild code with another patch from Mike Frysinger
  <vapier@gentoo.org> to allow the usage of subarches.

  09 Jan 2007; Chris Gianelloni <wolf31o2@gentoo.org> arch/alpha.py,
  arch/amd64.py, arch/arm.py, arch/hppa.py, arch/ia64.py, arch/mips.py,
  arch/ppc.py, arch/ppc64.py, arch/s390.py, arch/sh.py, arch/sparc.py,
  arch/sparc64.py, arch/x86.py, modules/generic_stage_target.py,
  targets/netboot/netboot-combine.sh, targets/support/bootloader-setup.sh,
  targets/support/create-iso.sh, targets/support/functions.sh,
  targets/support/netboot2-final.sh, targets/support/pre-kmerge.sh:
  Added a patch from Mike Frysinger <vapier@gentoo.org> to support cbuild.

  02 Jan 2007; Chris Gianelloni <wolf31o2@gentoo.org> README, arch/alpha.py,
  arch/amd64.py, arch/arm.py, arch/hppa.py, arch/ia64.py, arch/mips.py,
  arch/ppc.py, arch/ppc64.py, arch/s390.py, arch/sh.py, arch/sparc.py,
  arch/sparc64.py, arch/x86.py, files/catalyst.conf, modules/builder.py,
  modules/catalyst_lock.py, modules/catalyst_support.py,
  modules/embedded_target.py, modules/generic_stage_target.py,
  modules/generic_target.py, modules/grp_target.py,
  modules/livecd_stage1_target.py, modules/livecd_stage2_target.py,
  modules/netboot2_target.py, modules/netboot_target.py,
  modules/snapshot_target.py, modules/stage1_target.py,
  modules/stage2_target.py, modules/stage3_target.py,