@@ -3,9 +3,28 @@
 # Simple desriptions of catalyst settings. Please refer to the online
 # documentation for more information.
 
+# Creates a .DIGESTS file containing the hash output from any of the supported
+# options below.  Adding them all may take a long time.
+# Supported options: sha1, sha224, ripemd128, ripemd320, sha384, crc32,
+#	ripemd256, sha256, sha512, ripemd160, md5
+digests="md5 sha1"
+
 # distdir specifies where your distfiles are located. This setting should
 # work fine for most default installations.
 distdir="/usr/portage/distfiles"
+
+# envscript allows users to set options such as http proxies, MAKEOPTS,
+# GENTOO_MIRRORS, or any other environment variables needed for building.
+# The envscript file sets environment variables like so:
+# export FOO="bar"
+envscript="/etc/catalyst/catalystrc"
+
+# Internal hash function catalyst should use for things like autoresume, 
+# seedcache, etc.  The default and fastest is crc32.  You should not ever need
+# to change this unless your OS does not support it.
+# Supported options: sha1, sha224, ripemd128, ripemd320, sha384, crc32,
+#	ripemd256, sha256, sha512, ripemd160, md5
+hash_function="crc32"
 
 # options set different build-time options for catalyst. Some examples are:
 # autoresume = Attempt to resume a failed build, clear the autoresume flags with
@@ -28,37 +47,18 @@ distdir="/usr/portage/distfiles"
 # (These options can be used together)
 options="autoresume kerncache pkgcache seedcache snapcache"
 
+# portdir specifies the source portage tree used by the snapshot target.
+portdir="/usr/portage"
+
 # sharedir specifies where all of the catalyst runtime executables are. Most
 # users do not need to change this.
 sharedir="/usr/lib/catalyst"
+
+# snapshot_cache specifies where the snapshots will be cached to if snapcache is
+# enabled in the options.
+snapshot_cache="/var/tmp/catalyst/snapshot_cache"
 
 # storedir specifies where catalyst will store everything that it builds, and
 # also where it will put its temporary files and caches.
 storedir="/var/tmp/catalyst"
 
-# portdir specifies the source portage tree used by the snapshot target.
-# portdir="/usr/portage"
-
-# snapshot_cache specifies where the snapshots will be cached to if snapcache is
-# enabled in the options.
-# snapshot_cache="<path_to_new_cache_dir>"
-
-# Internal hash function catalyst should use for things like autoresume, 
-# seedcache, etc.  The default and fastest is crc32.  You should not ever need
-# to change this unless your OS does not support it.
-# Supported options: sha1, sha224, ripemd128, ripemd320, sha384, crc32,
-#	ripemd256, sha256, sha512, ripemd160, md5
-hash_function="crc32"
-
-# Creates a .digests file containing the hash output from any of the supported
-# options below.  Adding them all may take a long time.
-# Supported options: sha1, sha224, ripemd128, ripemd320, sha384, crc32,
-#	ripemd256, sha256, sha512, ripemd160, md5
-digests="md5 sha1"
-
-# envscript allows users to set options such as http proxies, MAKEOPTS,
-# GENTOO_MIRRORS, or any other environment variables needed for building.
-# The envscript file sets environment variables like so:
-# export FOO="bar"
-
-#envscript="/root/.catalystrc"
