@@ -1,6 +1,11 @@
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Id: $
 
+  30 Jan 2007; Chris Gianelloni <wolf31o2@gentoo.org> files/catalyst.conf,
+  +files/catalystrc, modules/catalyst_support.py:
+  Re-arranged catalyst.conf to make it easier to follow while looking at the
+  online reference and added a default catalystrc file, which does nothing.
+
   23 Jan 2007; Chris Gianelloni <wolf31o2@gentoo.org>
   modules/catalyst_support.py, modules/embedded_target.py,
   modules/generic_stage_target.py, modules/grp_target.py,
